--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Coding is fun!</h1>
-    <p>I am intersted in studying computer science.</p>
+    <p>
+        I am intersted in studying computer science.
+        I can write html, css, javascript, and a bit of java.
+    </p>
+
 </body>
 </html>
