--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         I am intersted in studying computer science.
         I can write html, css, javascript, and a bit of java.
         I can use ReactJS!!
+        Actually, I need to study css even more to get better.
     </p>
 
 </body>
