--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Git Practice</title>
 </head>
 <body>
-    <h1>Coding is fun!</h1>
-    <p>
+    <div class="About Coding">
+        <h1>Coding is fun!</h1>
+        <p>
         I am intersted in studying computer science.
         I can write html, css, javascript, and a bit of java.
         I can use ReactJS!!
         Actually, I need to study ReactJS even more to get better.
-    </p>
+        </p>
+    </div>
+    
 
 </body>
 </html>
