Commit no.8 (branch-two)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         Actually, I need to study ReactJS even more to get better.
         </p>
     </div>
+    <div class="About univ.">
+        <h1>University study is not interesting yet..</h1>
+    </div>
     
 
 </body>
