Commit no.9 (branch-two)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     </div>
     <div class="About univ.">
         <h1>University study is not interesting yet..</h1>
+        <p>
+            I am not yet interested in university studies.
+            Should I take a semester off?
+        </p>
     </div>
     
 
