Commit no.10 (branch-two)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <p>
             I am not yet interested in university studies.
             Should I take a semester off?
+            No, I shouldn't.
         </p>
     </div>
     
