--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>
             I am not yet interested in university studies.
             Should I take a semester off?
-            No, I shouldn't.
+            No, I should not.
         </p>
     </div>
     
