Commit no.12 (branch-three)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             I am not yet interested in university studies.
             Should I take a semester off?
             No, I should not.
+            Graduating with a high GPA is very important.
         </p>
     </div>
     
