--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <p>
             I am not yet interested in university studies.
             Should I take a semester off?
-            No, I shouldn't.
+            Yes, maybe I should.
+            Graduation and GPA is not that important to me.
+            Gaining experience in the community and gaining insight is more important.
         </p>
     </div>
     
