--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
             Gaining experience in the community and gaining insight is more important.
         </p>
     </div>
-    
+    <div class="Decision">
+        <h1>What should I do?</h1>
+        <p>
+            Actually, I'm not sure yet.
+            I'll be confident and choose as I please.
+        </p>
+    </div>
 
 </body>
 </html>
